<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>   
    <string name="timeText">i dont know</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_detail">Details of the day</string>
    <string name="title_activity_settings">SettingsActivity</string>
    
    
    <string name="pref_header_general">General</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_title">Location</string>
    <string name="pref_location_default"  translatable="false">03003</string>
    <string name="pref_metrics_key"  translatable="false">metrics</string>
    <string name="pref_metrics_name">Metrics</string>
    <string name="pref_metrics_imperial" translatable="false" >Imperial</string>
    <string-array translatable="false" name="pref_metrics_list">
        <item>Celsius</item>
        <item>Imperial</item>        
    </string-array>
    <string name="pref_metrics_default"  translatable="false">Celsius</string>
    
    <!--Actions-->
    <string name="action_settings">Settings</string>
    <string name="action_map">Map</string>
    <string name="action_share">Share</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
